--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -22,3 +22,8 @@
   exact = true
   stripComponents = 1
   refreshPeriod = "168h"
+[".config/bat/themes/Boron.tmTheme"]
+  type = "file"
+  readonly = true
+  url = "https://raw.githubusercontent.com/mjio/boron.tmtheme/master/Boron.tmTheme"
+  refreshPeriod = "168h"
