Added icons to path segments in oh my posh jellybeans theme

--- a/home/private_dot_config/oh-my-posh/themes/jellybeans.omp.yml
+++ b/home/private_dot_config/oh-my-posh/themes/jellybeans.omp.yml
@@ -38,7 +38,8 @@ blocks:
         foreground: p:mid-blue
         template: "{{ if not (.Segments.Contains \"GitRepo\") }}{{ .Path }} {{ end }}"
         properties:
-          style: agnoster_full
+          home_icon: "\uf015  ~"
+          style: full
       - type: git
         alias: GitRepo
         style: diamond
@@ -54,7 +55,7 @@ blocks:
         alias: GitPath
         style: plain
         foreground: p:mid-blue
-        template: "{{ if ne .Dir .PWD }}{{ trimPrefix (print .Dir \"/\") .PWD }} {{ end }}"
+        template: "{{ if ne .Dir .PWD }}\uf1d2 {{ trimPrefix (print .Dir \"/\") .PWD }} {{ end }}"
   - type: prompt
     alignment: right
     segments:
