Added script to install nushell Added external files for: - bat syntax highlighting of nu scripts - bookmark plugin script Updated bat reload cache script: - To reload cache if syntax files change - To hack fix the nushell sublime syntax file Added script to seed nushell bookmarks Added initial nushell config files Updated neovim config: - Added nushell/tree-sitter-nu plugin - Added nu to treesitter config Updated Oh My Posh theme to display the name of the shell if it isn't zsh

--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -52,3 +52,13 @@
   readonly = true
   url = "https://raw.githubusercontent.com/mjio/boron.tmtheme/master/Boron.tmTheme"
   refreshPeriod = "168h"
+[".config/bat/syntaxes/nushell.sublime-syntax"]
+  type = "file"
+  readonly = true
+  url = "https://raw.githubusercontent.com/kurokirasama/nushell_sublime_syntax/refs/heads/main/nushell.sublime-syntax"
+  refreshPeriod = "168h"
+[".config/nushell/bookmark_for_dir.nu"]
+  type = "file"
+  readonly = true
+  url = "https://raw.githubusercontent.com/yh17549/nu-dir-bookmark/refs/heads/main/bookmark_for_dir.nu"
+  refreshPeriod = "168h"
