Added sublime syntax file for ledger cli. Added treesj nvim plugin

--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -57,6 +57,11 @@
   readonly = true
   url = "https://raw.githubusercontent.com/kurokirasama/nushell_sublime_syntax/refs/heads/main/nushell.sublime-syntax"
   refreshPeriod = "168h"
+[".config/bat/syntaxes/ledger.sublime-syntax"]
+  type = "file"
+  readonly = true
+  url = "https://raw.githubusercontent.com/etienne-monier/LedgerTools/refs/heads/master/Ledger.sublime-syntax"
+  refreshPeriod = "168h"
 [".config/nushell/bookmark_for_dir.nu"]
   type = "file"
   readonly = true
