--- a/home/private_dot_config/oh-my-posh/themes/jellybeans.omp.yml
+++ b/home/private_dot_config/oh-my-posh/themes/jellybeans.omp.yml
@@ -1,4 +1,13 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
+upgrade:
+  # Display an upgrade notice on shell start
+  notice: true
+  # Automatically update minor versions
+  auto: true
+  # Interval to check for updates (default: 24h)
+  interval: 24h
+  # Where to check for upgrades (cdn or github, default: cdn)
+  source: cdn
 final_space: true
 version: 3
 console_title_template: "{{ .Pwd }}"
