--- a/home/private_dot_config/oh-my-posh/themes/jellybeans.omp.yml
+++ b/home/private_dot_config/oh-my-posh/themes/jellybeans.omp.yml
@@ -2,9 +2,9 @@
 upgrade:
   # Display an upgrade notice on shell start
   notice: true
-  # Automatically update minor versions
+  # Automatically upgrade minor versions
   auto: true
-  # Interval to check for updates (default: 24h)
+  # Interval to check for upgrades (default: 24h)
   interval: 24h
   # Where to check for upgrades (cdn or github, default: cdn)
   source: cdn
