Styled cpu and mem displays in tmux

--- a/home/private_dot_config/tmux/jellybeans.conf
+++ b/home/private_dot_config/tmux/jellybeans.conf
@@ -11,7 +11,7 @@ set-option -g status-left-length 60
 # Right status: show hostname, current window, current pane, and current time
 set-option -gF @hostname '#[fg=#a11278,bg=terminal,nobold,noitalics,nounderscore]#[fg=#eeb6de,bg=#a11278]  #H #[fg=#12a13a,bg=#a11278,nobold,noitalics,nounderscore]'
 set-option -g @nohostname '#[fg=#12a13a,bg=terminal,nobold,noitalics,nounderscore]'
-set-option -g status-right 'CPU #(~/.config/tmux/cpu.sh) MEM #(~/.config/tmux/mem.sh) #{?#{||:#{SSH_CONNECTION},#{SSH_CLIENT}},#{@hostname},#{@nohostname}}#[fg=#b6eec6,bg=#12a13a]  #{?#{e|<:#{window_width},120},,W#{active_window_index}/}P#P #[fg=#1278a1,bg=#12a13a,nobold,noitalics,nounderscore]#[fg=#b6deee,bg=#1278a1]󰢗 #{?#{e|<:#{window_width},120},%m/%d,%a %F} %I:%M %p#[fg=#1278a1,bg=terminal,nobold,noitalics,nounderscore]'
+set-option -g status-right '#[fg=#d1d1d1,bg=terminal]CPU #(~/.config/tmux/cpu.sh) #[fg=#d1d1d1,bg=terminal]MEM #(~/.config/tmux/mem.sh) #{?#{||:#{SSH_CONNECTION},#{SSH_CLIENT}},#{@hostname},#{@nohostname}}#[fg=#b6eec6,bg=#12a13a]  #{?#{e|<:#{window_width},120},,W#{active_window_index}/}P#P #[fg=#1278a1,bg=#12a13a,nobold,noitalics,nounderscore]#[fg=#b6deee,bg=#1278a1]󰢗 #{?#{e|<:#{window_width},120},%m/%d,%a %F} %I:%M %p#[fg=#1278a1,bg=terminal,nobold,noitalics,nounderscore]'
 # Increase max character length (default 40)
 set-option -g status-right-length 60
 
