--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -16,6 +16,12 @@
   exact = true
   stripComponents = 1
   refreshPeriod = "168h"
+[".zsh/plugins/zsh-vi-mode"]
+  type = "archive"
+  url = "https://github.com/jeffreytse/zsh-vi-mode/archive/master.tar.gz"
+  exact = true
+  stripComponents = 1
+  refreshPeriod = "168h"
 [".zsh/plugins/fzf-tab"]
   type = "archive"
   url = "https://github.com/Aloxaf/fzf-tab/archive/master.tar.gz"
